--- a/Final_visualization.ipynb
+++ b/Final_visualization.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The codes below are two visualizations of our testing results,  the first one has four lines which show correlations of different machine learning models,  while the second one  shows acurracy.\n",
+    "### The codes below are two visualizations of our final evaluation results which can show the performance of different models,  the first one has four lines which show correlations of different machine learning models,  while the second one  shows acurracy.\n",
     "### We had saved these two pictures in result folder, You can also check the results directly .\n",
     "### Please make sure you installed the extension of the bokeh correctly,  these codes require BokehJS 2.0.0\n"
    ]
